--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <title>Document</title>
 </head>
 <body>
-    <canvas id="renderCanvas" width="800" height="600" class = 'behind'></canvas>
+    <div class= "infront">
+        <div class="productName">
+            <img src="img/pressText.svg" id="productText">
+        </div>
+        <div class="controls">
+            <img src="img/handButton.svg" id="handButton" width="1024" height="1024">
+            <img src="img/resetButton.svg" id="resetButton" width="1024" height="1024">
+        </div>
+    </div>
+    <div class= "behind">
+        <canvas id="renderCanvas" width="800" height="600" class = 'behind'></canvas>
+    </div>
 </body>
 </html>
